[graph] root invariant

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,3 +17,7 @@ AllCops:
 # NOTE: disabled for better code clarity in specs
 RSpec/DescribedClass:
   Enabled: false
+
+# NOTE: degrades performance
+Style/MultipleComparison:
+  Enabled: false
