[graph] "has at least one exit" invariant

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,3 +21,7 @@ RSpec/DescribedClass:
 # NOTE: degrades performance
 Style/MultipleComparison:
   Enabled: false
+
+# NOTE: for domain logic clarity
+Style/ZeroLengthPredicate:
+  Enabled: false
